force-app/main/default/objects/Deal_Health_Weight__mdt/Deal_Health_Weight__mdt.object-meta.xml
<CustomObject>
    <label>Deal Health Weight</label>
    <pluralLabel>Deal Health Weights</pluralLabel>
    <description>Configurable weights and thresholds for deal health scoring</description>
</CustomObject>