force-app/main/default/objects/Deal_Health_Weight__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <description>Whether this weight configuration is active</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>