force-app/main/default/objects/Deal_Health_Weight__mdt/fields/Signal_Type__c.field-meta.xml
<CustomField>
    <fullName>Signal_Type__c</fullName>
    <label>Signal Type</label>
    <description>The type of signal this weight applies to</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activity Gap</fullName>
            </value>
            <value>
                <fullName>Stage Age</fullName>
            </value>
            <value>
                <fullName>Close Date Drift</fullName>
            </value>
            <value>
                <fullName>Stakeholders</fullName>
            </value>
            <value>
                <fullName>Next Step</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>