force-app/main/default/objects/Deal_Health_Weight__mdt/fields/Threshold_Value__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Value__c</fullName>
    <label>Threshold Value</label>
    <description>The threshold value for this tier (e.g., 7 for Activity Gap Tier 1)</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>