force-app/main/default/objects/Deal_Health_Weight__mdt/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <description>The tier level (1 = best, 2 = medium, 3 = lowest)</description>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>